# wasm-qrcode-gen

./: .gitignore  Cargo.toml
examples/: generate_qr.rs
src/: lib.rs
www/: index.html  index.js
