[package]
name = "wasm-qrcode-gen"
version = "0.1.0"
edition = "2021"
authors = ["taka-h"]
description = "A WebAssembly QR code generation library"
license = "MIT"
repository = "https://github.com/takao-h/wasm-qrcode-gen"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
qrcode = { version = "0.14", features = ["image"] }
js-sys = "0.3.61"
web-sys = { version = "0.3.61", features = ["console"] }
image = "0.24.7"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = 3
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']

