[package]
name = "wasm-qrcode-gen"
version = "0.1.0"
edition = "2021"
authors = ["taka-h"]
description = "A WebAssembly QR code generation library"
license = "MIT"
repository = "https://github.com/takao-h/wasm-qrcode-gen"

[lib]
name = "wasm_qrcode_gen"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
qrcode-generator = "4.1.9"
js-sys = "0.3.61"
web-sys = { version = "0.3.61", features = ["console"] }
base64 = "0.21.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = 3
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']
